<resources>
    <string name="app_name">MyFirstJob</string>
    <string name="title_activity_offer_viewer_screen">OfferViewerScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Ofertas</string>
    <string name="menu_gallery">Editar perfil</string>

    <!-- LOGIN -->
    <string name="error_login">Usuario y/o contraseña incorrecto</string>
    <string name="welcome">Bienvenido</string>
    <!-- END LOGIN -->

    <!-- NEW OFFER -->
    <string name="new_offer">Crear oferta</string>
    <string name="show_offer">Ver oferta</string>
    <string name="modify_offer">Editar oferta</string>
    <string name="job_offer">Oferta de empleo</string>
    <string name="practice">Prácticas</string>
    <string name="company_name">Empresa</string>
    <string name="offer_name">Título oferta</string>
    <string name="offer_boolean">Oferta activa</string>
    <string name="offer_hours">Número de horas</string>
    <string name="salary">Salario</string>
    <string name="description">Descripción</string>
    <string name="save_new_offer">Guardar</string>
    <string name="editOffer">Editar</string>
    <string name="close">Cerrar</string>
    <string-array name="workTypes">
        <item>Presencial</item>
        <item>Semi-presencial</item>
        <item>A distancia</item>
    </string-array>
    <string-array name="typeOfContract">
        <item>Indefinido</item>
        <item>Temporal</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- END NEW OFFER -->
    <string name="my_offers">Mis ofertas</string>
    <string name="accept">Aceptar</string>
    <string name="reject">Rechazar</string>
</resources>