<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NewOffer">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layModal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <Button
            android:id="@+id/btnAccept"
            android:layout_width="128dp"
            android:layout_height="50dp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="277dp"
            android:onClick="removeAccept"
            android:text="Aceptar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnReject"
            android:layout_width="132dp"
            android:layout_height="46dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="277dp"
            android:onClick="removeReject"
            android:text="Rechazar"
            app:layout_constraintStart_toEndOf="@+id/btnAccept"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="219dp"
            android:layout_height="80dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="230dp"
            android:text="¿Seguro que desea eliminar?"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/users"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginTop="329dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:onClick="showUsers"
            app:layout_constraintBottom_toTopOf="@+id/etDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/etHours"
            app:layout_constraintTop_toBottomOf="@+id/helpButton"
            app:srcCompat="?android:attr/actionModeFindDrawable" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/helpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:onClick="manual"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:rippleColor="#606F8A"
            app:srcCompat="@android:drawable/ic_menu_help"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btnInscrib"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3dp"
            android:onClick="joinOffer"
            android:text="Inscribirse"
            android:visibility="visible"
            app:iconTint="#3F51B5"
            app:layout_constraintEnd_toStartOf="@+id/btnEdit"
            app:layout_constraintStart_toEndOf="@+id/btnEditSave"
            app:layout_constraintTop_toBottomOf="@+id/etDescription" />

        <Button
            android:id="@+id/btnEditSave"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="16dp"
            android:onClick="saveEditedOffer"
            android:text="@string/save_new_offer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnEdit" />

        <Button
            android:id="@+id/btnSaveNewOffer"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="152dp"
            android:layout_marginTop="4dp"
            android:onClick="saveNewOffer"
            android:text="@string/save_new_offer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etDescription" />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:onClick="modify"
            android:text="@string/editOffer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etDescription" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="61dp"
            android:text="@string/practice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnRemove"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="4dp"
            android:backgroundTint="#912727"
            android:onClick="removeOffer"
            android:text="Eliminar"
            android:textAlignment="center"
            android:textColor="#EFEFEF"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/btnClose"
            app:layout_constraintTop_toBottomOf="@+id/etDescription" />

        <Button
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="4dp"
            android:onClick="close"
            android:text="@string/close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etDescription" />

        <Spinner
            android:id="@+id/spTypeOfContract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:entries="@array/typeOfContract"
            android:minHeight="48dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/swOfferBool" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/new_offer"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="367dp"
            android:layout_height="77dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="22dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spTypeOfContract" />

        <EditText
            android:id="@+id/etHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="101dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="100dp"
            android:ems="10"
            android:hint="@string/offer_hours"
            android:inputType="number"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/swOfferBool" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swOfferBool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="139dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="138dp"
            android:checked="true"
            android:minHeight="48dp"
            android:text="@string/offer_boolean"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSalary" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="73dp"
            android:text="@string/job_offer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swTypeOffer"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="53dp"
            android:layout_marginTop="17dp"
            android:onClick="onChangeSpinnerTypeOffer"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Spinner
            android:id="@+id/spTypeWork"
            android:layout_width="207dp"
            android:layout_height="48dp"
            android:layout_marginStart="102dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="102dp"
            android:entries="@array/workTypes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etCompany" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="102dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="99dp"
            android:ems="10"
            android:hint="@string/offer_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/swTypeOffer" />

        <EditText
            android:id="@+id/etSalary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="101dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="100dp"
            android:ems="10"
            android:hint="@string/salary"
            android:inputType="number"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spTypeWork" />

        <EditText
            android:id="@+id/etCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="101dp"
            android:ems="10"
            android:hint="@string/company_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etName" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>